FMK-11424 clean up

--- a/fmk-160-idws-schema-classes/pom.xml
+++ b/fmk-160-idws-schema-classes/pom.xml
@@ -39,6 +39,7 @@
                             <xnocompile>true</xnocompile>
                             <bindingDirectory>../etc/jaxb</bindingDirectory>
                             <bindingFiles>
+                                <bindingFile>Shared_bindings.xjb</bindingFile>
                                 <bindingFile>MedicineCard_Idws_bindings.xjb</bindingFile>
                             </bindingFiles>
                         </configuration>
