Fmk 11427 ændret skemaer til JAXB (#159)
Co-authored-by: Louise Bonderup Dohn <lbdo@trifork.com>
Co-authored-by: Markus Andreassen <maa@trifork.com>

--- a/fmk-160-schema-classes/pom.xml
+++ b/fmk-160-schema-classes/pom.xml
@@ -2,82 +2,124 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>medicinkortet-schema</artifactId>
-        <groupId>dk.medicinkortet</groupId>
-        <version>${revision}</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.trifork</groupId>
-    <artifactId>fmk-160-schema-classes</artifactId>
+  <parent>
+    <artifactId>medicinkortet-schema</artifactId>
+    <groupId>dk.medicinkortet</groupId>
     <version>${revision}</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+  <groupId>com.trifork</groupId>
+  <artifactId>fmk-160-schema-classes</artifactId>
+  <version>${revision}</version>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.sun.xml.ws</groupId>
-                <artifactId>jaxws-maven-plugin</artifactId>
-                <version>4.0.3</version>
-                <executions>
-                    <execution>
-                        <id>MC</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>wsimport</goal>
-                        </goals>
-                        <configuration>
-                            <wsdlUrls>
-                                <wsdlUrl>../mc160_wsdl/target/resources/wsdl/MedicineCard-inline_2022_01_01.wsdl</wsdlUrl>
-                            </wsdlUrls>
-                            <sourceDestDir>${project.build.directory}/generated-sources/wsimport</sourceDestDir>
-                            <xnocompile>true</xnocompile>
-                            <bindingDirectory>../etc/jaxb</bindingDirectory>
-                            <bindingFiles>
-                                <bindingFile>MedicineCard_bindings.xjb</bindingFile>
-                            </bindingFiles>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>POR</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>wsimport</goal>
-                        </goals>
-                        <configuration>
-                            <wsdlUrls>
-                                <wsdlUrl>../mc160_wsdl/target/resources/wsdl/PatientRegistration-inline_2022_01_01.wsdl</wsdlUrl>
-                            </wsdlUrls>
-                            <sourceDestDir>${project.build.directory}/generated-sources/wsimport</sourceDestDir>
-                            <xnocompile>true</xnocompile>
-                            <bindingDirectory>../etc/jaxb</bindingDirectory>
-                            <bindingFiles>
-                                <bindingFile>PatientRegistration_bindings.xjb</bindingFile>
-                            </bindingFiles>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <medicineCardEpisodeRaw>${project.build.directory}/generated-sources/wsimport/MedicineCard.raw.episode</medicineCardEpisodeRaw>
+    <medicineCardEpisode>${project.build.directory}/generated-sources/wsimport/MedicineCard.episode</medicineCardEpisode>
+  </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>dk.medicinkortet</groupId>
-            <artifactId>MedicineCard_2022_01_01</artifactId>
-            <version>${revision}</version>
-        </dependency>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>com.sun.xml.ws</groupId>
+        <artifactId>jaxws-maven-plugin</artifactId>
+        <version>4.0.3</version>
+        <executions>
+          <execution>
+            <id>MC</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>wsimport</goal>
+            </goals>
+            <configuration>
+              <wsdlUrls>
+                <wsdlUrl>../mc160_wsdl/target/resources/wsdl/MedicineCard-inline_2022_01_01.wsdl</wsdlUrl>
+              </wsdlUrls>
+              <sourceDestDir>${project.build.directory}/generated-sources/wsimport</sourceDestDir>
+              <xnocompile>true</xnocompile>
+              <bindingDirectory>../etc/jaxb</bindingDirectory>
+              <bindingFiles>
+                <bindingFile>Shared_bindings.xjb</bindingFile>
+                <bindingFile>MedicineCard_bindings.xjb</bindingFile>
+                <bindingFile>GetAcuteDispensingPeriodsRequest_bindings.xjb</bindingFile>
+                <bindingFile>ListDispensingPatientsRequest_bindings.xjb</bindingFile>
+                <bindingFile>ListPackingGroupsRequest_bindings.xjb</bindingFile>
+              </bindingFiles>
+              <xjcArgs>
+                <xjcArg>-episode</xjcArg>
+                <xjcArg>${medicineCardEpisodeRaw}</xjcArg>
+              </xjcArgs>
+            </configuration>
+          </execution>
+          <execution>
+            <id>POR</id>
+            <phase>process-sources</phase>
+            <goals>
+              <goal>wsimport</goal>
+            </goals>
+            <configuration>
+              <wsdlUrls>
+                <wsdlUrl>../mc160_wsdl/target/resources/wsdl/PatientRegistration-inline_2022_01_01.wsdl</wsdlUrl>
+              </wsdlUrls>
+              <sourceDestDir>${project.build.directory}/generated-sources/wsimport</sourceDestDir>
+              <xnocompile>true</xnocompile>
+              <bindingDirectory>../etc/jaxb</bindingDirectory>
+              <bindingFiles>
+                <bindingFile>${medicineCardEpisode}</bindingFile>
+                <bindingFile>Shared_bindings.xjb</bindingFile>
+                <bindingFile>PatientRegistration_bindings.xjb</bindingFile>
 
-        <dependency>
-            <groupId>com.sun.xml.ws</groupId>
-            <artifactId>jaxws-rt</artifactId>
-            <version>4.0.3</version>
-        </dependency>
-    </dependencies>
+              </bindingFiles>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>sanitize-episode</id>
+            <phase>generate-sources</phase>
+            <configuration>
+              <target>
+                <mkdir dir="${project.build.directory}/generated-sources/wsimport"/>
+                <copy file="${medicineCardEpisodeRaw}" tofile="${medicineCardEpisode}" overwrite="true"/>
+                <replaceregexp file="${medicineCardEpisode}"
+                               match="map=&quot;false&quot;"
+                               replace=""
+                               flags="g"/>
+                <!-- ${medicineCardEpisode} captures the artifacts generated during the first jaxws-maven-plugin execution, and the second execution reuses them when producing the POR sources.
+                The episode also carries the output directory defined in the medicinecard JAXB bindings for the shared namespace, so we strip that entry before running the plugin again. -->
+                <replaceregexp file="${medicineCardEpisode}"
+                               match="\n    &lt;schemaBindings &gt;\n      &lt;package name=&quot;dk.fmk_teknik._160.mc_schema&quot;/&gt;\n    &lt;/schemaBindings&gt;"
+                               replace=""
+                               flags="gs"/>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
+  <dependencies>
+    <dependency>
+      <groupId>dk.medicinkortet</groupId>
+      <artifactId>MedicineCard_2022_01_01</artifactId>
+      <version>${revision}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.xml.ws</groupId>
+      <artifactId>jaxws-rt</artifactId>
+      <version>4.0.3</version>
+    </dependency>
+  </dependencies>
 </project>
