FMK-11424 re-added (deleted by mistake) wsdl's to built jar

--- a/fmk-160-schema-classes/pom.xml
+++ b/fmk-160-schema-classes/pom.xml
@@ -107,6 +107,22 @@
         </executions>
       </plugin>
     </plugins>
+    <resources>
+      <resource>
+        <directory>../mc160_wsdl/target/resources/wsdl/MedicineCard_2022_01_01/</directory>
+        <includes>
+          <include>MedicineCard_2022_01_01.wsdl</include>
+        </includes>
+        <targetPath>web/wsdl/MedicineCard_2022_01_01</targetPath>
+      </resource>
+      <resource>
+        <directory>../mc160_wsdl/target/resources/wsdl/PatientRegistration_2022_01_01/</directory>
+        <includes>
+          <include>PatientRegistration_2022_01_01.wsdl</include>
+        </includes>
+        <targetPath>web/wsdl/PatientRegistration_2022_01_01</targetPath>
+      </resource>
+    </resources>
   </build>
 
   <dependencies>
