--- a/fmk-160-idws-schema-classes/pom.xml
+++ b/fmk-160-idws-schema-classes/pom.xml
@@ -47,6 +47,15 @@
                 </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>../mc160idws_wsdl/target/resources/wsdl/MedicineCard_Idws_2022_01_01/</directory>
+                <includes>
+                    <include>MedicineCard_Idws_2022_01_01.wsdl</include>
+                </includes>
+                <targetPath>web/wsdl/MedicineCard_Idws_2022_01_01</targetPath>
+            </resource>
+        </resources>
     </build>
 
     <dependencies>
