--- a/mc160idws_wsdl/pom.xml
+++ b/mc160idws_wsdl/pom.xml
@@ -135,6 +135,19 @@
                             </descriptors>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>make-combined</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <attach>true</attach>
+                            <descriptors>
+                                <descriptor>${project.parent.basedir}/src/assembly/combinedidws.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
