Flyttet schema-zip-filer ud i deres egne zip-filer i stedet for en samlet zip-fil med zip-filer

--- a/mc160_wsdl/pom.xml
+++ b/mc160_wsdl/pom.xml
@@ -86,12 +86,12 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <appendAssemblyId>false</appendAssemblyId>
+                            <appendAssemblyId>true</appendAssemblyId>
                             <attach>true</attach>
                             <descriptors>
                                 <descriptor>${project.parent.basedir}/src/assembly/mc160.xml</descriptor>
                             </descriptors>
-                            <finalName>MedicineCard_2022_01_01-collection</finalName>
+                            <finalName>MedicineCard_2022_01_01</finalName>
                         </configuration>
                     </execution>
                     <execution>
@@ -101,9 +101,9 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <appendAssemblyId>false</appendAssemblyId>
+                            <appendAssemblyId>true</appendAssemblyId>
                             <attach>true</attach>
-                            <finalName>MedicineCard-inline_2022_01_01.wsdl</finalName>
+                            <finalName>MedicineCard_2022_01_01</finalName>
                             <descriptors>
                                 <descriptor>${project.parent.basedir}/src/assembly/mc160-inline.xml</descriptor>
                             </descriptors>
@@ -116,12 +116,12 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <appendAssemblyId>false</appendAssemblyId>
+                            <appendAssemblyId>true</appendAssemblyId>
                             <attach>true</attach>
                             <descriptors>
                                 <descriptor>${project.parent.basedir}/src/assembly/por160.xml</descriptor>
                             </descriptors>
-                            <finalName>PatientRegistration_2022_01_01-collection</finalName>
+                            <finalName>PatientRegistration_2022_01_01</finalName>
                         </configuration>
                     </execution>
                     <execution>
@@ -131,24 +131,11 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <appendAssemblyId>false</appendAssemblyId>
+                            <appendAssemblyId>true</appendAssemblyId>
                             <attach>true</attach>
-                            <finalName>PatientRegistration-inline_2022_01_01.wsdl</finalName>
+                            <finalName>PatientRegistration_2022_01_01</finalName>
                             <descriptors>
                                 <descriptor>${project.parent.basedir}/src/assembly/por160-inline.xml</descriptor>
-                            </descriptors>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>make-combined</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <attach>true</attach>
-                            <descriptors>
-                                <descriptor>${project.parent.basedir}/src/assembly/combined.xml</descriptor>
                             </descriptors>
                         </configuration>
                     </execution>
