--- a/fmk-160-schema-classes/pom.xml
+++ b/fmk-160-schema-classes/pom.xml
@@ -47,6 +47,7 @@
                 <bindingFile>GetAcuteDispensingPeriodsRequest_bindings.xjb</bindingFile>
                 <bindingFile>ListDispensingPatientsRequest_bindings.xjb</bindingFile>
                 <bindingFile>ListPackingGroupsRequest_bindings.xjb</bindingFile>
+                <bindingFile>DrugStrength_bindings.xjb</bindingFile>
               </bindingFiles>
               <xjcArgs>
                 <xjcArg>-episode</xjcArg>
